(Mod) Pinpoint 모드 영역별 선택가능 기능

--- a/src/app.css
+++ b/src/app.css
@@ -501,3 +501,7 @@ main {
 .pinpoint-control button:hover {
   background-color: var(--bg-dark);
 }
+
+.viewer.active {
+  border: 2px solid var(--accent-primary);
+}
