(Add) 미니맵 켜고 끄기 기능

--- a/src/app.css
+++ b/src/app.css
@@ -851,3 +851,8 @@ main {
   background-color: var(--accent-primary);
 }
 
+.controls-main button.active {
+  background-color: var(--accent-primary);
+  border-color: var(--accent-hover);
+  color: #fff;
+}
