(Mod) 회전 창 배율창 따로 분리

--- a/src/app.css
+++ b/src/app.css
@@ -527,6 +527,11 @@ main {
   background-color: var(--bg-med);
 }
 
+.pinpoint-controls-header {
+  justify-content: space-between;
+}
+
+
 .folder-control {
   display: flex;
   align-items: center;
