(Mod) toggle 모드 큰창 원복

--- a/src/app.css
+++ b/src/app.css
@@ -176,6 +176,10 @@ main {
   min-height: 0; 
 }
 
+.toggle-mode-main .viewers {
+  grid-template-columns: 1fr;
+}
+
 .filelist { 
   width: 300px; 
   border-right: 1px solid var(--border-color); 
